@@ -233,6 +233,18 @@ nav.navbar {
   }
 }
 
+div#editbar-wrapper {
+  padding-top: 5px !important;
+}
+
+#edit-bar, #content-views {
+  margin-bottom: 7px !important;
+}
+
+dl.actionMenu {
+  margin-bottom: 10px !important;
+  
+}
 
 // -----------------------------------------------------------------------------
 // Small screen / tablet
